Fixed login view bug (login panel was not centered)

--- a/resources/assets/sass/partials/_utils.scss
+++ b/resources/assets/sass/partials/_utils.scss
@@ -1,20 +1,22 @@
-#body-login {
+// body#body-login
+// #body-login #app
+body#body-login,
+#body-login #app {
+  height:  100%;
+  width:   100%;
 
-  // #body-login body
-  // #body-login html
-  // #body-login #app
-  body, html, #app {
-    height:  100%;
-    width:   100%;
-
-    padding: 0;
-    margin:  0;
-  }
+  padding: 0;
+  margin:  0;
 
   // #body-login #app > .container
   #app > .container {
     height: 100%;
   }
+}
+
+html {
+  height: 100%;
+  width:  100%;
 }
 
 @mixin flexbox {
